feat: add db migrator.

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -1,17 +1,20 @@
 version: "3"
+env:
+  DB_DIALECT: postgres
+  DB_HOST: localhost
+  DB_PORT: 5432
+  DB_NAME: bookly
+  DB_USER: postgres
+  DB_PASSWORD: postgres
+  DB_SILENCE_LOGGER: true
 
 tasks:
   run:
-    env:
-      DB_DIALECT: postgres
-      DB_HOST: localhost
-      DB_PORT: 5432
-      DB_NAME: bookly
-      DB_USER: postgres
-      DB_PASSWORD: postgres
-      DB_SILENCE_LOGGER: true
     cmds:
       - go run cmd/api/main.go
+  test:
+    cmds:
+      - go test -v ./...
   fmt:
     cmds:
       - gofmt -s -w -l .
@@ -25,9 +28,6 @@ tasks:
       - go vet -all ./...
       - misspell -error */**
       - staticcheck $(go list ./...)
-  test:
-    cmds:
-      - go test -v ./...
   setup-db:
     desc: Setup the database
     cmds:
@@ -36,3 +36,6 @@ tasks:
     desc: Remove the database
     cmds:
       - docker compose -f deploy/dev/docker-compose.yaml down
+  migrate-api:
+    cmds:
+      - go run cmd/api-dbmigration/main.go
