--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -7,6 +7,10 @@ env:
   DB_USER: postgres
   DB_PASSWORD: postgres
   DB_SILENCE_LOGGER: true
+  DB_SLOW_THRESHOLD_MILLISECONDS: 1000
+  JWT_SALT: salt
+  JWT_SECRET_KEY: secret
+  INTERNAL_TOKEN: secret
 
 tasks:
   run:
@@ -37,5 +41,7 @@ tasks:
     cmds:
       - docker compose -f deploy/dev/docker-compose.yaml down
   migrate-api:
+    # env:
+    #   ROLLBACK_LAST: true
     cmds:
       - go run cmd/api-dbmigration/main.go
