--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -17,6 +17,9 @@ tasks:
   dev:
     cmds:
       - docker compose -f deploy/dev/docker-compose.yaml up --build
+  remove-dev:
+    cmds:
+      - docker compose -f deploy/dev/docker-compose.yaml down
   test:
     cmds:
       - go test -v ./...
@@ -46,7 +49,7 @@ tasks:
   remove-db:
     desc: Remove the database
     cmds:
-      - docker compose -f deploy/dev/docker-compose.yaml postgres adminer down
+      - docker compose -f deploy/dev/docker-compose.yaml down postgres adminer
   migrate-api:
     # env:
     #   ROLLBACK_LAST: true
