--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -30,6 +30,7 @@ jobs:
           go install github.com/itchyny/gojq/cmd/gojq@latest
           go install honnef.co/go/tools/cmd/staticcheck@latest
           go install github.com/client9/misspell/cmd/misspell@latest
+          go install github.com/golangci/golangci-lint/cmd/golangci-lint@latest
 
       - name: Run fmt
         run: task fmt
