--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -9,6 +9,7 @@ on:
 jobs:
   fmt-and-lint:
     runs-on: ubuntu-latest
+    container: omegaatt36/bookly-lint:latest
     steps:
       - uses: actions/checkout@v3
 
@@ -16,21 +17,6 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: "1.23"
-
-      - name: Install Task
-        uses: arduino/setup-task@v2
-        with:
-          version: 3.x
-
-      - name: Install dependencies
-        run: |
-          go install golang.org/x/tools/cmd/goimports@latest
-          go install github.com/daixiang0/gci@latest
-          go install github.com/mgechev/revive@latest
-          go install github.com/itchyny/gojq/cmd/gojq@latest
-          go install honnef.co/go/tools/cmd/staticcheck@latest
-          go install github.com/client9/misspell/cmd/misspell@latest
-          go install github.com/golangci/golangci-lint/cmd/golangci-lint@latest
 
       - name: Run fmt
         run: task fmt
